test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-nil.good
init-field-dflt-nonnil-unmanaged-from-oknil-nil.chpl:8: error: cannot initialize 'lhs' of type 'unmanaged MyClass' from 'nil'
init-field-dflt-nonnil-unmanaged-from-oknil-nil.chpl:13: error: done
